Multi-porject support

--- a/resources/templates/Makefile_win
+++ b/resources/templates/Makefile_win
@@ -8,23 +8,23 @@
 
 CC        = gcc
 CXX       = g++
-CXXFLAGS 	= -O3 -Wall -fPIC -fvisibility=hidden
-LDFLAGS		= -shared -fvisibility=hidden
-TARGET_LIB 	= libsdcode.so
+LD       = ld
+CXXFLAGS 	= -O3 -Wall 
+LDFLAGS		= -shared 
+TARGET_LIB 	= libsdcode.dll
 
 SRCS 		= $(wildcard ../*.cpp)
 OBJS 		= $(subst ../,,$(subst .cpp,.o,$(SRCS)))
-
 
 .PHONY: all
 all: $(TARGET_LIB)
 
 $(TARGET_LIB): $(OBJS)
-	$(CXX) $(LDFLAGS) $^ -o $@ -lsdcore
+	$(CXX) $(LDFLAGS) $^ -lsdcore -o $@ 
 
 %.o:../%.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 .PHONY: clean
 clean:
-	rm -rf $(TARGET_LIB) *.o
+	del $(TARGET_LIB) *.o
