--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 dist: trusty
 
 install:
-  - sudo apt-get install -y qt5-default qttools5-dev-tools libqt5multimedia5 libfftw3-3
+  - sudo apt-get install -y qt5-default qttools5-dev-tools libqt5multimedia5 qtmultimedia5-dev libfftw3-3
 
 script:
   - cd sdcore
