--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 sudo: required
 dist: trusty
 
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - sleep 3
+
 install:
-  - sudo apt-get install -y qt5-default qttools5-dev-tools libqt5multimedia5 qtmultimedia5-dev libfftw3-3 libfftw3-dev
+  - sudo apt-get install -y qt5-default qttools5-dev-tools libqt5multimedia5 qtmultimedia5-dev libfftw3-3 libfftw3-dev libegl1-mesa
 
 script:
   - cd sdcore
