--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,25 @@ before_script:
   - sleep 3
 
 install:
+  - mkdir matio
+  - cd matio
+  - git clone --depth 5 https://github.com/madler/zlib
+  - cd zlib
+  - ./configure
+  - sudo make install
+  - cd ..
+  - git clone --depth 1 --branch hdf5_1_10_1 https://git.hdfgroup.org/scm/hdffv/hdf5.git hdf5_1_10_1
+  - cd hdf5_1_10_1
+  - ./configure --quiet --enable-shared --enable-build-mode=debug --disable-deprecated-symbols --disable-hl --disable-strict-format-checks --disable-memory-alloc-sanity-check --disable-instrument --disable-parallel --disable-trace --disable-internal-debug --enable-optimization=debug --disable-asserts --with-pic --with-default-api-version=v110 CFLAGS="-w"
+  - make install -C src
+  - cd ..
+  - git clone git://git.code.sf.net/p/matio/matio
+  - cd matio
+  - ./autogen.sh
+  - ./configure --enable-mat73=yes --with-hdf5=$TRAVIS_BUILD_DIR/matio/hdf5_1_10_1/hdf5
+  - make 
+  - sudo make install
+  
   - sudo apt-get install -y qt5-default qttools5-dev-tools libqt5multimedia5 qtmultimedia5-dev libfftw3-3 libfftw3-dev libegl1-mesa
 
 script:
