--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
   - git clone --depth 1 --branch hdf5_1_10_1 https://git.hdfgroup.org/scm/hdffv/hdf5.git hdf5_1_10_1
   - cd hdf5_1_10_1
   - ./configure --prefix=/usr/local/hdf5 --quiet --enable-shared --enable-build-mode=debug --disable-deprecated-symbols --disable-hl --disable-strict-format-checks --disable-memory-alloc-sanity-check --disable-instrument --disable-parallel --disable-trace --disable-internal-debug --enable-optimization=debug --disable-asserts --with-pic --with-default-api-version=v110 CFLAGS="-w"
-  - make install -C src
+  - sudo make install -C src
   - cd ..
   - git clone git://git.code.sf.net/p/matio/matio
   - cd matio
