--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 sudo: required
 dist: xenial
 
-before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-  - sleep 3
+services:
+  - xvfb
 
 install:
   - sudo apt-get install -y qt5-default qttools5-dev-tools libqt5multimedia5 qtmultimedia5-dev libfftw3-3 libfftw3-dev libegl1-mesa
@@ -13,24 +11,7 @@ install:
   
   # Install matio
   - mkdir matio
-  - cd matio
-  - git clone --depth 5 https://github.com/madler/zlib
-  - cd zlib
-  - ./configure
-  - sudo make install
-  - cd ..
-  - git clone --depth 1 --branch hdf5_1_10_1 https://git.hdfgroup.org/scm/hdffv/hdf5.git hdf5_1_10_1
-  - cd hdf5_1_10_1
-  - ./configure --prefix=/usr/local/hdf5 --quiet --enable-shared --enable-build-mode=debug --disable-deprecated-symbols --disable-hl --disable-strict-format-checks --disable-memory-alloc-sanity-check --disable-instrument --disable-parallel --disable-trace --disable-internal-debug --enable-optimization=debug --disable-asserts --with-pic --with-default-api-version=v110 CFLAGS="-w"
-  - sudo make install -C src
-  - cd ..
-  - git clone https://github.com/tbeu/matio.git
-  - cd matio
-  - ./autogen.sh
-  - ./configure --enable-mat73=yes --with-hdf5=/usr/local/hdf5
-  - make 
-  - sudo make install
-  - cd $TRAVIS_BUILD_DIR
+  - sudo apt-get install libmatio-dev
   
   # Install RtAudio
   - git clone https://github.com/thestk/rtaudio.git
