--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - xvfb
 
 install:
-  - sudo apt-get install -y qt5-default qttools5-dev-tools libqt5multimedia5 qtmultimedia5-dev libfftw3-3 libfftw3-dev libegl1-mesa
+  - sudo apt-get install -y qt5-default qttools5-dev-tools libfftw3-3 libfftw3-dev libegl1-mesa
   # RtAudio support
   - sudo apt-get install libasound2-dev libjack-dev libpulse-dev doxygen oss4-dev
   
