simdsp2: add CLI smoke runner for JSON pipelines

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,6 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = ["pytest", "ruff", "mypy"]
+
+[project.scripts]
+simdsp-smoke-audio = "app_desktop.smoke_audio:main"
